<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".screens.login.Login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/allan"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="68sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint_your_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint_your_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            android:layout_margin="5dp"
            android:text="@string/text_register_button"
            style="@style/AppButton" />

        <Button
            android:id="@+id/login_button"
            android:layout_margin="5dp"
            android:text="@string/text_login_button"
            style="@style/AppButton" />


    </LinearLayout>


</LinearLayout>
</layout>