<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D81B60"
    tools:context=".screens.login.Welcome">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/allan"
        android:text="@string/title_welcome"
        android:textColor="#FFFFFF"
        android:textSize="68sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="8sp"
        android:text="@string/description_welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/button_welcome"
        style="@style/AppButton" />
</LinearLayout>
</layout>