<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.screens.shoe.ShoeViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Use of LinearLayout to create a simple linear layout with vertical views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.shoe.ShoeDetail">

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_name"
            android:textSize="16sp" />

            <EditText
                android:id="@+id/shoeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:text="@={shoe.name}"
                android:ems="10"
                android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_company"
            android:textSize="16sp" />

            <EditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:text="@={shoe.company}"
                android:ems="10"
                android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_size"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/shoeSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            android:ems="10" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/shoeDescription"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:text="@={shoe.description}"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <!-- Use of LinearLayout to create a simple linear layout with horizontal views -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/saveShoe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> shoeViewModel.addShoe(shoe)}"
                android:text="@string/button_save" />

        </LinearLayout>


    </LinearLayout>
</layout>